src/assets/base.css
/* Lightmode */
:root {
  /* Cores de fundo */
  --default-background: #fbf1c7;
  --secondary-background: #f2e5bc;
  --details-background: #ebdbb2;
  --dark-background: #3c3836;

  /* Cores de texto */
  --default-text: #3c3836;
  --secondary-text: #504945;
  --disabled-text: #7c6f64;

  /* Cores complementares */
  --default-border: #d5c4a1;
  --highlight: #fbf1c7;

  --accent: #d65d0e;
  --accent-contrast: #fbf1c7;
}

/* Darkmode */
[data-theme="dark"] {
  /* Cores de fundo */
  --default-background: #282828;
  --secondary-background: #32302f;
  --details-background: #3c3836;
  --dark-background: #1d2021;

  /* Cores de texto */
  --default-text: #ebdbb2;
  --secondary-text: #d5c4a1;
  --disabled-text: #a89984;

  /* Cores complementares */
  --default-border: #504945;

  --accent: #d3869b;
  --accent-contrast: #282828;
}

html{scroll-behavior:smooth}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  position: relative;
  font-weight: normal;
}

.container {
  max-width: 1200px;
  margin: 8rem auto;
  padding: 0 2rem;
}

@media (max-width: 768px) {
  .container { padding: 0 1.2rem; }
}

/* Fade transition */
.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.15s ease;
}

.fade-enter-from,
.fade-leave-to {
  opacity: 0;
}

.highlight {
  color: var(--accent);
  font-weight: 700;
}

